# sil-quest

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  index.html  pyproject.toml
.github/workflows/: linux.yml  mac.yml  pages.yml  release.yml  src.yml  windows.yml
lib/docs/: COMPILING.md  copying.txt
lib/edit/: object.txt  quest.txt  terrain.txt  tutorial_scenario.txt
lib/edit/quests/: main_game.txt  tutorial_scenario.txt
lib/pref/: graf-web.prf  graf.prf  message.prf  pref.prf
lib/xtra/graf/: TilePicker.html  osx_bmp2png.py
src/: adjacent-actions.c  birth.c  cave.c  cmd1.c  cmd2.c  cmd3-ui-inventory.c  cmd3.c  cmd4-ui-browser-am.c  cmd4-ui-browser-objects.c  cmd4-ui-knowledge.c  cmd4-ui-menus.c  cmd4-ui-smithing.c  cmd4-ui-view.c  cmd4.c  cmd6.c  config.h  current-square.c  defines.h  dungeon.c  externs.h  files.c  generate.c  h-config.h  h-system.h  init.h  init1.c  init2.c  item-rules.c  item-rules.h  load.c  main-gcu.c  main-web.c  main.c  main.h  melee1.c  melee2.c  monster2.c  oath.c  obj-info.c  object1.c  (+41 more)
web/: app.js  helper.js  index.html  manifest.webmanifest  style.css  sw.js  version.js.in
web/assets/sound/: bell.flac  coin.flac  death.flac  dig01.flac  disarm01.flac  disarm02.flac  drop01.flac  drop02.flac  eat01.flac  flee01.flac  hit01.flac  hit02.flac  hit03.flac  hitpoint_warn.flac  hitwall01.flac  hitwall02.flac  identify.flac  kill01.flac  kill02.flac  kill03.flac  kill04.flac  kill05.flac  miss01.flac  miss02.flac  miss03.flac  open02.flac  pickup01.flac  pickup02.flac  quaff01.flac  shoot01.flac  sound.json  step01.flac  step02.flac  step03.flac  step04.flac  teleport.flac
